18.Ingress/nginx-ingress/examples/headless-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx01
  name: nginx01
spec:
  selector:
    app: nginx01  # POD Label 지정
  clusterIP: None
  type: ClusterIP  
  ports:
  - name: port
    port: 80  # 80 port를 80 port로 redirect 
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx02
  name: nginx02
spec:
  selector:
    app: nginx02  # POD Label 지정
  clusterIP: None
  type: ClusterIP  
  ports:
  - name: port
    port: 80  # 80 port를 80 port로 redirect 
    protocol: TCP
    targetPort: 80
